experimental/parser/testdata/parser/syntax/unquoted_edition.proto.stderr.txt
error: the value of a `edition` declaration must be a string literal
  --> testdata/parser/syntax/unquoted_edition.proto:1:11
   |
 1 | edition = 2023;
   |           ^^^^
  help: add quotes to make this a string literal
   |
 1 | edition = "2023";
   |           +    +

encountered 1 error
